mdmCeneveo/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Plant_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plant Product</label>
        <referenceTo>Plant_Products__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Ref__c</fullName>
        <label>Product Ref</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Products_Must_Match</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PricebookEntry.Product2Id &lt;&gt;  Plant_Product__r.Product__r.Id, NOT(ISBLANK(Plant_Product__c )))</errorConditionFormula>
        <errorDisplayField>Plant_Product__c</errorDisplayField>
        <errorMessage>Select a Plant Product record with Product matching the Opportunity Product&apos;s Product.</errorMessage>
    </validationRules>
</CustomObject>